# rag-pdf-question-answering-system

./: .dockerignore  .env.example  Dockerfile.backend  Dockerfile.frontend  Jenkinsfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py
app/api/: models.py  routers.py
app/rag/: chain.py  chunker.py  loader.py  vectorstore.py
data/faiss_index/: index.faiss  index.pkl
frontend/: app.py
notebooks/: rag_pipeline.ipynb
