[project]
name = "rag-pdf-qa-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
